<resources>
    <string name="app_name">Whats The Number</string>
    <string name="btn_start">Start</string>
    <string name="btn_result">Results</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_about">About</string>

    <string name="btn_back">Back</string>

    <string name="version">version : 2.0</string>

    <string-array name="difficulty_values">

        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>

    </string-array>

    <string name="btn_save">Save</string>

    <string name="number_range_format">Guess a number in range %d to %d </string>

    <string name="turns_format">turn %d of %d</string>

    <string name="result_format">guessed number was %d and it was too %s</string>
    <string name="result_high">high</string>
    <string name="result_low">low</string>
    <string name="result_text">personal scoreboard</string>
    <string name="result_btn_publicSB">public scoreboard</string>
    <string name="result_btn_deleteMySB">delete my scoreboard</string>

    <string name="guessHistory_text">game guesses history</string>

    <string name="game_over_guess">Your last guess was :</string>
    <string name="game_over_rand_numb">Randon number was :</string>
    <string name="game_over_you_won">You Won !</string>
    <string name="game_over_you_lost">You lost.</string>

    <string name="about1">About the app</string>
    <string name="about2">What\'s the Number? app goal is to learn how to create mobile apps and use Android studio</string>
    <string name="about3">About the game : when you start a game a random number is generated, you have to guess what that number is, but you only
    have a limited amount of guesses, each time you make a guess game tells you if your guessed number was too high or too low</string>

    <string name="about4">App was made by Lukas Kaziliūnas IFAp-7</string>

    <string name="optName">Name</string>
    <string name="optAge">Age</string>
    <string name="optMusic">Sound</string>
    <string name="optDif">Difficulty</string>

    <string name="alert_msg_confirm_share">are you sure you want to share your result ? </string>
    <string name="alert_yes">yes</string>
    <string name="alert_no">no</string>

</resources>
