<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".SettingsActivity">

    <Switch
        android:id="@+id/switch_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="112dp"
        android:text="Switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_age" />

    <TextView
        android:id="@+id/settings_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/optMusic"
        app:layout_constraintStart_toStartOf="@+id/settings_age"
        app:layout_constraintTop_toBottomOf="@+id/settings_age" />

    <TextView
        android:id="@+id/settings_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="52dp"
        android:text="@string/optName"
        app:layout_constraintEnd_toStartOf="@+id/editText_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settings_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/optAge"
        app:layout_constraintStart_toStartOf="@+id/settings_name"
        app:layout_constraintTop_toBottomOf="@+id/settings_name" />

    <TextView
        android:id="@+id/settings_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/optDif"
        app:layout_constraintStart_toStartOf="@+id/settings_music"
        app:layout_constraintTop_toBottomOf="@+id/settings_music" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="165dp"
        android:layout_height="21dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/text_view_style"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_age"
        android:layout_width="165dp"
        android:layout_height="21dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/text_view_style"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_name" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="149dp"
        android:layout_height="28dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="56dp"
        android:entries="@array/difficulty_values"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_music" />

    <Button
        android:id="@+id/SettingsSave_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:background="@drawable/button_style"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>